@@ -1,0 +1,9 @@
+<header>Command to run after backup</header>
+
+If set, the command or script entered will be run as <tt>root</tt> after
+the backup is run on schedule. This can be useful for un-mounting removable
+or remote filesystems to which the backup was be written, or cleaning up
+old backup files. <p>
+
+<footer>
+
