@@ -1,0 +1,11 @@
+<header>Command to run before backup</header>
+
+If set, the command or script entered will be run as <tt>root</tt> before
+the backup is run on schedule. This can be useful for mounting removable
+or remote filesystems to which the backup should be written. <p>
+
+If the command fails (with a non-zero exit status), the rest of the backup
+will not proceed. <p>
+
+<footer>
+
