@@ -1839,6 +1839,9 @@ backup_when=Scheduled backup time
 backup_purge=Delete old backups
 backup_purgeno=Never
 backup_purgeyes=Yes, after
+backup_before=Command to run before backup
+backup_after=Command to run after backup
+backup_none=None set
 backup_disabled=Disabled
 backup_mode0=Local file or directory
 backup_mode0a=File or directory under <tt>virtualmin-backup/</tt>
